--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "liveServer.settings.host": "192.168.230.249",
+    //"liveServer.settings.host": "192.168.230.249",
+    "liveServer.settings.host":"192.168.0.111",
     "liveServer.settings.port": 5500
 }
